[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cities = { path = "./cities" }
csv = "1.3.0"
dns-lookup = "2.0.4"
dotenv = "0.15.0"
futures = "0.3.28"
geoutils = "0.5.1"
ipinfo = "2.2.0"
plotpy = "0.5.1"
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["serde_derive"] }
serde_json = "1.0.107"
surge-ping = "0.8.0"
tokio = { version = "1.33.0", features = ["full"] }
